Fixed toolbar getting hidden by map.

--- a/css/map.css
+++ b/css/map.css
@@ -17,6 +17,7 @@ body {
     position: absolute;
     top: 5em;
     left: 0.6em;
+    z-index: 1;
 }
 
 #toolbar .open-button {
